Run Topic2Vec_20newsgroups.ipynb

--- a/Topic2Vec_20newsgroups.ipynb
+++ b/Topic2Vec_20newsgroups.ipynb
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
-    "from time import time\n",
+    "import time\n",
     "import string\n",
     "import re\n",
     "# random\n",
@@ -274,7 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fit vectorizer without lemmatization done in 0.679s.\n"
+      "fit vectorizer without lemmatization done in 0.717s.\n"
      ]
     }
    ],
@@ -377,7 +377,7 @@
      "output_type": "stream",
      "text": [
       "Fitting LDA models with tf features, n_samples=4744 and n_features=19012...\n",
-      "done in 6.939s.\n"
+      "done in 7.391s.\n"
      ]
     }
    ],
@@ -645,36 +645,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "You must specify either total_examples or total_words, for proper alpha and progress calculations. The usual value is total_examples=model.corpus_count.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-fdbd0d07bf82>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msentences_perm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malpha\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m0.002\u001b[0m \u001b[0;31m# decrease the learning rate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmin_alpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malpha\u001b[0m \u001b[0;31m# fix the learning rate, no decay\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.virtualenvs/topic2vec/lib/python3.6/site-packages/gensim/models/word2vec.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, sentences, total_examples, total_words, epochs, start_alpha, end_alpha, word_count, queue_factor, report_delay)\u001b[0m\n\u001b[1;32m    811\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    812\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtotal_words\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtotal_examples\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 813\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"You must specify either total_examples or total_words, for proper alpha and progress calculations. The usual value is total_examples=model.corpus_count.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    814\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mepochs\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    815\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"You must specify an explict epochs count. The usual value is epochs=model.iter.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: You must specify either total_examples or total_words, for proper alpha and progress calculations. The usual value is total_examples=model.corpus_count."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0  duration:  79.49040913581848\n",
+      "epoch: 1  duration:  79.16777491569519\n",
+      "epoch: 2  duration:  79.27033591270447\n",
+      "epoch: 3  duration:  79.15545296669006\n",
+      "epoch: 4  duration:  79.03748416900635\n",
+      "epoch: 5  duration:  79.07876300811768\n",
+      "epoch: 6  duration:  79.31573700904846\n",
+      "epoch: 7  duration:  79.47487688064575\n",
+      "epoch: 8  duration:  79.53501987457275\n",
+      "epoch: 9  duration:  78.99562287330627\n"
      ]
     }
    ],
    "source": [
     "for epoch in range(10):\n",
-    "    model.train(it.sentences_perm())\n",
+    "    start = time.time()\n",
+    "    \n",
+    "    model.train(it.sentences_perm(), total_examples=model.corpus_count, epochs=model.iter)\n",
     "    model.alpha -= 0.002 # decrease the learning rate\n",
-    "    model.min_alpha = model.alpha # fix the learning rate, no decay"
+    "    model.min_alpha = model.alpha # fix the learning rate, no decay\n",
+    "    \n",
+    "    stop = time.time()\n",
+    "    duration = stop-start\n",
+    "    print('epoch:', epoch, ' duration: ', duration)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "fname =  os.getcwd() # Prints the working directory\n",
+    "p\n",
     "fname = fname + '/topic2vec_20NG_2_ndoc' + str(n_docs) + 'n_topic' + str(n_topics) + '.model'\n",
     "model.save(fname)"
    ]
