--- a/Topic2Vec_20newsgroups.ipynb
+++ b/Topic2Vec_20newsgroups.ipynb
@@ -680,14 +680,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/matthewupson/Documents/Topic2Vec/topic2vec_20NG_2_ndoc4744n_topic8.model\n"
+     ]
+    }
+   ],
    "source": [
     "fname =  os.getcwd() # Prints the working directory\n",
-    "p\n",
     "fname = fname + '/topic2vec_20NG_2_ndoc' + str(n_docs) + 'n_topic' + str(n_topics) + '.model'\n",
-    "model.save(fname)"
+    "model.save(fname)\n",
+    "print(fname)"
    ]
   }
  ],
